tests/NormalTests/paczka1/small_fuzzy/47770071.err
Error in line 2: TzOb S402 54,1
Error in line 3: ZFoD S315 37,2
